--- a/drone_control/config/nmpc_only.yaml
+++ b/drone_control/config/nmpc_only.yaml
@@ -1,24 +1,24 @@
 /**:
   ros__parameters:
     dynamic_param:
-      m: 3.0
+      m: 2.9
       MoiArray: [0.06, 0.06, 0.08]
 
     drone_param:
       arm_length: 0.265
       rotor_const: 1.465e-07
       moment_const: 0.01569
-      T_max: 9.0
+      T_max: 8.0
       T_min: 0.586
 
     nmpc_param:
       t_horizon: 1.0
-      n_nodes: 10
-      QArray: [ 2.0, 2.0, 2.0,        # px, py, pz (ROS1 설정)
-                1.0, 1.0, 1.0,        # vx, vy, vz (ROS1 설정)
-                0.0, 0.7, 0.7, 0.7,   # qw, qx, qy, qz (ROS1 설정)
-                0.05, 0.05, 0.05]     # wx, wy, wz (ROS1 설정)
-      R: [0.01]     # u1...u6 (ROS1 설정)
+      n_nodes: 20
+      QArray: [ 20.0, 20.0, 20.0,        # px, py, pz
+                12.0, 12.0, 12.0,        # vx, vy, vz
+                12.0, 12.0, 12.0, 12.0,   # qw, qx, qy, qz
+                5.0, 5.0, 5.0]     # wx, wy, wz
+      R: [0.01]     # u1...u6
 
     sensor_time_param:
       timeout:
