--- a/drone_dob/config/hgdo_config.yaml
+++ b/drone_dob/config/hgdo_config.yaml
@@ -15,3 +15,8 @@
       ang_vel_cutoff: 60.0
       disturbance_force_cutoff: 60.0
       disturbance_torque_cutoff: 60.0
+    topic_names:
+      odom_in_topic: "/S550/ground_truth/odometry"
+      odom_filtered_topic: "/l1_adaptive/odom_filtered"
+      actual_rpm_topic: "/uav/actual_rpm"
+      dob_topic: "/l1_adaptive/dob"
