--- a/drone_dob/config/hgdo_config.yaml
+++ b/drone_dob/config/hgdo_config.yaml
@@ -17,6 +17,6 @@
       disturbance_torque_cutoff: 60.0
     topic_names:
       odom_in_topic: "/S550/ground_truth/odometry"
-      odom_filtered_topic: "/l1_adaptive/odom_filtered"
+      filtered_odom_topic: "/filtered_odom"
       actual_rpm_topic: "/uav/actual_rpm"
-      dob_topic: "/l1_adaptive/dob"
+      dob_wrench_topic: "/hgdo/wrench"
