--- a/drone_control/config/nmpc_with_dob.yaml
+++ b/drone_control/config/nmpc_with_dob.yaml
@@ -21,3 +21,9 @@
                 100.0, 100.0, 100.0, 100.0,   # qw, qx, qy, qz
                 50.0, 50.0, 50.0]     # wx, wy, wz
       R: [100.0]     # u1...u6
+
+    topic_names:
+      cmd_topic: '/uav/cmd_raw'
+      filtered_odom_topic: '/hgdo/filtered_odom'
+      ref_topic: '/nmpc/ref'
+      dob_wrench_topic: '/hgdo/wrench'
