--- a/drone_control/config/nmpc_with_dob.yaml
+++ b/drone_control/config/nmpc_with_dob.yaml
@@ -24,6 +24,6 @@
 
     topic_names:
       cmd_topic: '/uav/cmd_raw'
-      filtered_odom_topic: '/hgdo/filtered_odom'
+      filtered_odom_topic: '/l1_adaptive/filtered_odom'
       ref_topic: '/nmpc/ref'
-      dob_wrench_topic: '/hgdo/wrench'
+      dob_wrench_topic: '/l1_adaptive/wrench'
