--- a/drone_dob/.vscode/settings.json
+++ b/drone_dob/.vscode/settings.json
@@ -25,5 +25,6 @@
         "/home/kay/optitrack_ws/install/natnet_ros2/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ]
+    ],
+    "ROS2.distro": "humble"
 }
