--- a/drone_dob/config/l1_adaptive_config.yaml
+++ b/drone_dob/config/l1_adaptive_config.yaml
@@ -1,21 +1,27 @@
 /**:
   ros__parameters:
+
     drone:
       m: 2.9
       l: 0.265
       MoiArray: [0.060, 0.060, 0.080]
       motor_const: 1.465e-7
       moment_const: 0.01569
+
     l1_adaptive:
       dob_looptime: 0.010
-      As_array: [-5.0, -5.0, -5.0, -5.0, -5.0, -5.0]
+      As_array: [-5.0, -5.0, -5.0,    # vx, vy, vz (Body frame)
+                 -5.0, -5.0, -5.0]    # wx, wy ,wz (Body frame)
       freq_cutoff_trans: 60.0
       freq_cutoff_rot: 60.0
+
     lpf:
       lin_vel_cutoff: 20.0
       ang_vel_cutoff: 60.0
+
     topic_names:
       odom_in_topic: "/S550/ground_truth/odometry"
       filtered_odom_topic: "/l1_adaptive/filtered_odom"
       actual_rpm_topic: "/uav/actual_rpm"
+      base_line_control_topic: "/nmpc/control"
       dob_topic: "/l1_adaptive/wrench"
