base_line_msg - nmpc and rc control

--- a/drone_control/config/nmpc_only.yaml
+++ b/drone_control/config/nmpc_only.yaml
@@ -10,6 +10,8 @@
       moment_const: 0.01569
       T_max: 8.0
       T_min: 0.586
+      acc_max: 15000.0    # Rotor Acc 15 krpm/s
+      acc_min: 15000.0    # Rotor Dec 15 krpm/s
 
     nmpc_param:
       t_horizon: 1.0
@@ -27,5 +29,6 @@
         do: 0.10
     topic_names:
       cmd_topic: '/uav/cmd_raw'
-      filtered_odom_topic: '/hgdo/filtered_odom'
+      base_line_control_topic: '/nmpc/control'
+      filtered_odom_topic: '/S550/ground_truth/odom'
       ref_topic: '/nmpc/ref'
