dob-topic param name modified

--- a/drone_dob/config/l1_adaptive_config.yaml
+++ b/drone_dob/config/l1_adaptive_config.yaml
@@ -20,8 +20,8 @@
       ang_vel_cutoff: 60.0
 
     topic_names:
-      odom_in_topic: "/mavros/local_position/odom"
-      filtered_odom_topic: "/l1_adaptive/filtered_odom"
-      actual_rpm_topic: "/uav/actual_rpm"
-      base_line_control_topic: "/nmpc/control"
-      dob_topic: "/l1_adaptive/wrench"
+      odom_in: "/mavros/local_position/odom"
+      filtered_odom: "/l1_adaptive/filtered_odom"
+      actual_rpm: "/uav/rotor_state"
+      # base_line_control: "/nmpc/control"
+      dob_wrench: "/l1_adaptive/wrench"
