--- a/drone_dob/config/hgdo_config.yaml
+++ b/drone_dob/config/hgdo_config.yaml
@@ -20,7 +20,7 @@
       disturbance_torque_cutoff: 60.0
 
     topic_names:
-      odom_in_topic: "/mavros/local_position/odom"
-      filtered_odom_topic: "/hgdo/filtered_odom"
-      actual_rpm_topic: "/uav/actual_rpm"
-      dob_wrench_topic: "/hgdo/wrench"
+      odom_in: "/mavros/local_position/odom"
+      filtered_odom: "/hgdo/filtered_odom"
+      actual_rpm: "/uav/rotor_state"
+      dob_wrench: "/hgdo/wrench"
