--- a/drone_control/config/nmpc_with_hgdo.yaml
+++ b/drone_control/config/nmpc_with_hgdo.yaml
@@ -8,7 +8,7 @@
       arm_length: 0.265
       motor_const: 1.465e-07
       moment_const: 0.01569
-      T_max: 8.0
+      T_max: 7.806985     # 7300 RPM
       T_min: 0.586
       acc_max: 15000.0    # Acc 15 krpm/s
       acc_min: 15000.0    # Dec 15 krpm/s
