--- a/drone_control/config/rc_control.yaml
+++ b/drone_control/config/rc_control.yaml
@@ -19,7 +19,7 @@
 
     drone_param:
       arm_length: 0.265
-      rotor_const: 1.465e-07
+      motor_const: 1.465e-07
       moment_const: 0.01569
       T_max: 8.0
       T_min: 0.586
